[tool.poetry]
name = "rebalance-core"
version = "0.1.0"
description = ""
authors = ["Alex Parrill <aparrill@datto.com>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
